# roscamp-repo-1

./: .claude  .codex  .gemini  .gitignore  AGENTS.md  CLAUDE.md  README.md  compile_commands.json  conversation.txt  frames_2025-10-23_17.41.29.gv
ros2_ws/src/packee_arm/: CMakeLists.txt  README.md  package.xml  setup.py
ros2_ws/src/packee_arm/packee_arm/: __init__.py  arm_controller.py  mock_packee_main.py
ros2_ws/src/packee_arm/scripts/: arm_controller.py  mock_packee_main.py
ros2_ws/src/packee_arm/src/: mock_packee_main.cpp
ros2_ws/src/shopee_interfaces/: CMakeLists.txt  README.md
ros2_ws/src/shopee_interfaces/msg/: ProductLocation.msg
ros2_ws/src/shopee_interfaces/srv/: MainGetSectionPose.srv  PackeeArmPlaceProduct.srv  PackeePackingStart.srv  PickeeArmPickProduct.srv  PickeeMainVideoStreamStart.srv  PickeeMobileMoveToLocation.srv  PickeeMobileUpdateGlobalPath.srv  PickeeWorkflowMoveToSection.srv  PickeeWorkflowStartTask.srv
ros2_ws/src/shopee_main_service/: .env  .env.example  QUICK_TEST.md  README.md  README_TEST.md  TEST_GUIDE.md  package.xml  setup.py
ros2_ws/src/shopee_main_service/resource/: shopee_main_service
ros2_ws/src/shopee_main_service/scripts/: README.md  init_schema.sql  reset_database.sh  run_main_service.py  run_main_service.sh  run_mock_llm.py  sample_data.sql  setup_database.sh  test_client.py  test_llm_flows.py  verify_db_state.py
ros2_ws/src/shopee_main_service/shopee_main_service/: __init__.py  api_controller.py  client_utils.py  config.py  database_manager.py  database_models.py  event_bus.py  inventory_service.py  llm_client.py  main_service_node.py  mock_llm_server.py  mock_packee_node.py  mock_pickee_node.py  mock_robot_node.py  order_service.py  product_service.py  redis_robot_state_backend.py  robot_allocator.py  robot_coordinator.py  robot_state_backend.py  robot_state_store.py  scenario_suite.py  streaming_service.py  user_service.py
ros2_ws/src/shopee_main_service/shopee_main_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ros2_ws/src/shopee_main_service/tests/: conftest.py  test_api_controller.py  test_dashboard_controller.py  test_llm_client.py  test_main_service_node.py  test_order_service.py  test_product_service.py  test_redis_robot_state_backend.py  test_robot_allocator.py  test_robot_health_monitor.py  test_robot_state_store.py  test_user_service.py
shopee_ros2/src/main_service/: .env.example  README.md  TEST_GUIDE.md  mypy.ini  package.xml  setup.cfg  setup.py
shopee_ros2/src/main_service/launch/: app_support.launch.py  mock_environment.launch.py  packee_main_support.launch.py  pickee_main_support.launch.py
shopee_ros2/src/main_service/main_service/: __init__.py  api_controller.py  assignment_tracker.py  client_utils.py  config.py  constants.py  database_manager.py  database_models.py  event_bus.py  failure_handler.py  inventory_service.py  llm_client.py  location_builder.py  main_service_node.py  metrics_collector.py  mock_app_node.py  mock_robot_node.py  models.py  order_notifier.py  order_service.py  order_states.py  product_service.py  robot_coordinator.py  robot_state_store.py  scenario_suite.py  streaming_service.py  user_service.py  utils.py
shopee_ros2/src/main_service/scripts/: README.md  compile_ui.sh  init_schema.sql  sample_data.sql  test_client.py
shopee_ros2/src/main_service/tests/: conftest.py  test_api_controller.py  test_dashboard_controller.py  test_inventory_service.py  test_llm_client.py  test_main_service_node.py  test_order_service.py  test_product_service.py  test_robot_allocator.py  test_robot_coordinator.py  test_robot_health_monitor.py  test_robot_history_service.py  test_robot_selector.py  test_robot_state_store.py  test_streaming_service.py  test_user_service.py
shopee_ros2/src/packee_arm/: CMakeLists.txt  COMPLIANCE_REPORT.md  README.md  TEST_GUIDE.md  package.xml  setup.cfg  setup.py
shopee_ros2/src/packee_arm/launch/: packee_arm.launch.py
shopee_ros2/src/packee_arm/packee_arm/: pymycobot_left.py  pymycobot_right.py
shopee_ros2/src/packee_arm/resource/: packee_arm
shopee_ros2/src/packee_arm/scripts/: jetcobot_bridge.py  jetcobot_send_coords.py  jetcobot_standby.py
shopee_ros2/src/packee_arm/src/: arm_driver_proxy.cpp  execution_manager.cpp  gripper_controller.cpp  mock_packee_main.cpp  packee_arm_controller.cpp  packee_arm_left.py  packee_arm_right.py  packee_arm_right_2.py  pymycobot  pymycobot_dual  pymycobot_dual.py  pymycobot_left  pymycobot_left.py  pymycobot_left_test  pymycobot_right  pymycobot_right.py  simple_mycobot_motion.cpp  visual_servo_module.cpp
shopee_ros2/src/packee_arm/test/: test_flake8.py
shopee_ros2/src/packee_main/: CMakeLists.txt  package.xml
shopee_ros2/src/packee_main/launch/: packee_main_server.launch.py
shopee_ros2/src/packee_main/packee_main_controller/: CMakeLists.txt  package.xml
shopee_ros2/src/packee_main/src/: packee_check_availability.cpp  packee_main_service.cpp  packee_main_topic.cpp  packee_packing.cpp  packee_packing_backup.cpp  packee_packing_mokup.cpp  packee_state_manager.cpp
shopee_ros2/src/pickee_mobile_wonho/: CMakeLists.txt  README.md  TEST_GUIDE.md  package.xml  pluginlib.xml
shopee_ros2/src/pickee_mobile_wonho/config/: laser_filter.yaml  pickee_mobile_params.yaml
shopee_ros2/src/pickee_mobile_wonho/launch/: display.launch.xml  gazebo_bringup.launch.xml  launch_sim.launch.xml  localization_launch.xml  map_building.launch.xml  map_view.launch.xml  mobile_bringup.launch.xml  nav2_bringup_launch.xml  nav2_bringup_launch1.xml  nav2_bringup_launch2.xml  nav2_view.launch.xml  navigation_launch.xml  pc_bringup.launch.xml  pickee_mobile_controller.launch.py  robot_bringup.launch.xml  spawn.launch.xml  upload.launch.xml
shopee_ros2/src/pickee_mobile_wonho/map/: map1021.pgm  map1021.yaml  map3.yaml  map_scaled.yaml  map_test.pgm  map_test.yaml  (+1 more)
shopee_ros2/src/shopee_app/: README.md  ROS2_INTEGRATION_GUIDE.md  app.py  dev.py  package.xml  requirements.txt  run_gui.sh  setup.cfg  setup.py
shopee_ros2/src/shopee_interfaces/: CMakeLists.txt  README.md  package.xml
(+1750 files in other folders)
