<?xml version="1.0"?>
<package format="3">
  <name>packee_arm</name>
  <version>0.1.0</version>
  <description>Packee dual-arm coordination and mock communication package for Shopee robotics system.</description>

  <!-- Maintainer & License -->
  <maintainer email="addinedu@todo.todo">Park Daejun</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>shopee_interfaces</depend>

  <!-- Message/Service utilities -->
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Optional utilities -->
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
