<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeName="packageFormat3"?>
<package format="3">
  <name>pickee_mobile_wonho</name>
  <version>1.0.0</version>
  <description>Shopee Pickee Mobile Controller - C++ Implementation</description>
  <maintainer email="wonho@shopee.com">Wonho</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 Core Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Shopee Interfaces -->
  <depend>shopee_interfaces</depend>

  <!-- Navigation Stack -->
  <depend>nav2_common</depend>
  <depend>nav2_core</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>

  <!-- Math Library -->
  <build_depend>eigen3_cmake_module</build_depend>
  <depend>eigen3</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>