<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>pickee_mobile_wonho</name>
    <version>1.0.0</version>
    <description>Shopee Pickee Mobile Controller (Nav2 기반 C++ 구현)</description>
    <maintainer email="wonho@shopee.com">Wonho</maintainer>
    <license>Apache-2.0</license>

    <!-- Build Dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <!-- Core ROS2 Dependencies -->
    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>rclcpp_lifecycle</depend>
    
    <!-- Basic ROS2 Message Dependencies -->
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>std_msgs</depend>
    
    <!-- Navigation2 Dependencies -->
    <depend>nav2_mppi_controller</depend>
    
    <!-- Transform Dependencies -->
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    
    <!-- Shopee Interface Dependencies -->
    <depend>shopee_interfaces</depend>
    
    <!-- Test Dependencies -->
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
