<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>packee_main_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="djckorea58@gmail.com">addinedu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>shopee_interfaces</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>shopee_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>